# bloodwyrm

./: LICENSE  README.md  ceraxes.cabal  package.yaml  stack.yaml
bootstrap/: .env  .gitignore  Cargo.toml
bootstrap/entity/: Cargo.toml
bootstrap/entity/src/: lib.rs
bootstrap/migration/: Cargo.toml
bootstrap/migration/src/: lib.rs  main.rs
bootstrap/src/: main.rs
bootstrap/src/entity/: mod.rs
bootstrap/src/graphql/: schema.rs
bootstrap/src/graphql/mutation/: mod.rs
bootstrap/src/graphql/query/: mod.rs
src/: GenUtils.hs  Initialise.hs  Main.hs  Markers.hs  ModelGen.hs
templates/: entity.rs.mustache  migration.rs.mustache  mutation.rs.mustache  query.rs.mustache
