[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
sea-orm = { version = "0.9.2", features = ["runtime-tokio-native-tls","sqlx-sqlite"] }
sea-orm-migration = "0.9.2"
